--- a/build.gradle
+++ b/build.gradle
@@ -114,7 +114,7 @@ configure([project(':ratelimitj-redis'), project(':ratelimitj-inmemory'), projec
     apply plugin: 'maven'
 
     project.group = 'es.moki.ratelimitj'
-    project.version = '0.7.0-RC3-tup'
+    project.version = '0.7.0-RC3-tup-1'
 
     // OSSRH publication
     if (ossrhUser != "") {
